# ecu-tuner-enterprise

./: .eslintrc.js  .gitignore  README.md  package-lock.json  package.json  scaffold-ecu-tuner.ps1  tsconfig.json
apps/desktop-app/: CMakeLists.txt
apps/desktop-app/include/: DynoView.h  FlashManager.h  GraphView.h  LiveDashboard.h  MapTableEditor.h  TuneBrowser.h
apps/desktop-app/src/: DynoView.cpp  FlashManager.cpp  GraphView.cpp  LiveDashboard.cpp  MapTableEditor.cpp  TuneBrowser.cpp
apps/web-app/: package.json
infrastructure/docker/: docker-compose.yml
not-root-docs/: roadmap-phase-1.md  roadmap-phase-2.md  roadmap-phase-3.md  roadmap-phase-4.md  roadmap-phase-5.md  roadmap.md
services/api-gateway/: package-lock.json  package.json
services/auth-service/: package-lock.json  package.json  tsconfig.json
services/datalog-service/: package-lock.json  package.json
services/ecu-service/: CMakeLists.txt
services/ecu-service/include/: checksum_engine.h  ecu_connector.h  flash_manager.h  obd_reader.h
services/ecu-service/src/: checksum_engine.cpp  ecu_connector.cpp  flash_manager.cpp  main.cpp  obd_reader.cpp
services/ecu-service/tests/: test_checksum_engine.cpp  test_ecu_connector.cpp  test_flash_manager.cpp  test_obd_reader.cpp
services/notification-service/: Dockerfile  package-lock.json  package.json
services/reporting-service/: package-lock.json  package.json
services/tune-service/: package-lock.json  package.json
services/vehicle-service/: package-lock.json  package.json
shared/constants/: kafka_topics.ts  obd_pids.ts  sensor_limits.ts
(+43 files in other folders)
